--- a/index.html
+++ b/index.html
@@ -12,72 +12,108 @@
     <link rel="stylesheet" href="style.css">
 
     <!--Google Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Roboto Condensed' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|VT323" rel="stylesheet">
 
     <title>r o o f t o p</title>
 </head>
 
 <body>
 <a href="https://tsangela.github.io/" target="_blank" class="credit">Theme by Angela Tsang.</a>
-<a href="http://lipcream.chu.jp/" target="_blank" class="credit" style="right: 0;">Background by Hinata Nakamura.</a>
 
 <div class="container-center" id="inside" style="">
-    <div class="col-self" style="vertical-align: top">
+    <div class="col-self">
         <h1 class="title" align="center">Theme 1 - Rooftop</h1>
         <img src="images/me.jpg" class="dp dp-s dp-l">
         <div class="container-link-row">
-            <a href="#"><div class="container-link-col">link1</div></a>
-            <a href="#"><div class="container-link-col">link2</div></a>
-            <a href="#"><div class="container-link-col">link3</div></a>
-            <a href="#"><div class="container-link-col">link4</div></a>
+            <a href="#">
+                <div class="container-link-col">link1</div>
+            </a>
+            <a href="#">
+                <div class="container-link-col">link2</div>
+            </a>
+            <a href="#">
+                <div class="container-link-col">link3</div>
+            </a>
+            <a href="#">
+                <div class="container-link-col">link4</div>
+            </a>
         </div>
         <div class="container-about">
             A B O U T
         </div>
         <div class="container-desc">
-            <p style="text-align: center"> </p>
-            <p style="text-align: center">🌸theme by <a href="https://tsangela.github.io/" target="_blank">tsangela</a> 🌸</p>
-            <p>Maecenas placerat lacinia eleifend. Proin nec pretium justo. In hac habitasse platea dictumst. Ut porta vehicula varius. Vestibulum odio libero, egestas placerat molestie cursus, consectetur vitae odio. Etiam nunc augue, consequat ac hendrerit et, efficitur a ipsum. Aenean ac cursus leo.</p>
+            <p style="text-align: center"></p>
+            <p style="text-align: center">🌸theme by <a href="https://tsangela.github.io/" target="_blank">tsangela</a>
+                🌸</p>
+            <p>Maecenas placerat lacinia eleifend. Proin nec pretium justo. In hac habitasse platea dictumst. Ut porta
+                vehicula varius. Vestibulum odio libero, egestas placerat molestie cursus, consectetur vitae odio. Etiam
+                nunc augue, consequat ac hendrerit et, efficitur a ipsum. Aenean ac cursus leo.</p>
         </div>
     </div>
 
     <div class="col-info">
-        <div class="container-info">
+        <div class="section-info">
             <h1 id="top">Lorem ipsum</h1>
             <p class="date">july 8, 2018</p>
-            <a href="https://www.pixiv.net/member_illust.php?mode=medium&illust_id=19574338" target="_blank"><img src="images/昼下がり.jpg" class="img-info"></a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis tempus risus, eu convallis ex. Proin iaculis, velit eget tristique consectetur, urna odio dictum diam, at commodo ante turpis ac purus. Integer egestas feugiat cursus. Nulla eget dolor et neque lobortis posuere. Nulla mollis nulla vitae quam mattis tincidunt. Praesent sodales, mauris et consequat suscipit, sem mauris vulputate turpis, quis ornare nisi est ac tortor. Duis vel felis neque.</p>
-            <hr>
+            <img src="images/昼下がり.jpg" class="img-info">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis tempus risus, eu convallis ex.
+                Proin iaculis, velit eget tristique consectetur, urna odio dictum diam, at commodo ante turpis ac purus.
+                Integer egestas feugiat cursus. Nulla eget dolor et neque lobortis posuere. Nulla mollis nulla vitae
+                quam mattis tincidunt. Praesent sodales, mauris et consequat suscipit, sem mauris vulputate turpis, quis
+                ornare nisi est ac tortor. Duis vel felis neque.</p>
+        </div>
+
+        <div class="section-info">
             <h1>Suspendisse</h1>
             <p class="date">july 5, 2018</p>
-            <a href="https://www.pixiv.net/member_illust.php?mode=medium&illust_id=11557316" target="_blank"><img src="images/美しい日本の風景.jpg" class="img-info"></a>
-            <p>Suspendisse potenti. Donec eu tellus id tortor tempor lacinia. Curabitur eu mollis purus. Etiam commodo, risus a mollis rhoncus, tortor leo ultricies ante, vitae dignissim diam nisi sed eros. Integer rhoncus, tortor quis ultrices porttitor, neque ipsum blandit massa, vitae facilisis est sem dignissim ex. Vestibulum sodales egestas mattis. Nulla eu vehicula dolor.</p>
-            <hr>
+            <img src="images/美しい日本の風景.jpg" class="img-info">
+            <p>Suspendisse potenti. Donec eu tellus id tortor tempor lacinia. Curabitur eu mollis purus. Etiam commodo,
+                risus a mollis rhoncus, tortor leo ultricies ante, vitae dignissim diam nisi sed eros. Integer rhoncus,
+                tortor quis ultrices porttitor, neque ipsum blandit massa, vitae facilisis est sem dignissim ex.
+                Vestibulum sodales egestas mattis. Nulla eu vehicula dolor.</p>
+        </div>
+
+        <div class="section-info">
             <h1>Fusce vitae</h1>
             <p class="date">july 3, 2018</p>
-            <a href="https://www.pixiv.net/member_illust.php?mode=medium&illust_id=57946466" target="_blank"><img src="images/こっちにおいでよ.jpg" class="img-info"></a>
-            <p>Fusce vitae malesuada elit. Aliquam vitae maximus magna. Vivamus vulputate porttitor ex sit amet elementum. Vestibulum sodales vitae metus vel scelerisque. Curabitur quis rutrum erat, et fermentum turpis. Morbi in consequat est, eu sagittis lorem. Integer venenatis velit quis mauris suscipit, quis dignissim turpis suscipit. Nulla ultrices massa at lacus tempus aliquet. Quisque nulla nisi, viverra tincidunt dui a, pulvinar varius elit. Mauris dictum nec nulla eget porttitor. Nulla in nisl dictum, dapibus nulla id, hendrerit nunc.</p>
-            <hr>
+            <img src="images/こっちにおいでよ.jpg" class="img-info">
+            <p>Fusce vitae malesuada elit. Aliquam vitae maximus magna. Vivamus vulputate porttitor ex sit amet
+                elementum. Vestibulum sodales vitae metus vel scelerisque. Curabitur quis rutrum erat, et fermentum
+                turpis. Morbi in consequat est, eu sagittis lorem. Integer venenatis velit quis mauris suscipit, quis
+                dignissim turpis suscipit. Nulla ultrices massa at lacus tempus aliquet. Quisque nulla nisi, viverra
+                tincidunt dui a, pulvinar varius elit. Mauris dictum nec nulla eget porttitor. Nulla in nisl dictum,
+                dapibus nulla id, hendrerit nunc.</p>
+        </div>
+
+        <div class="section-info">
             <h1>Duis porttitor</h1>
             <p class="date">june 27, 2018</p>
-            <a href="https://www.pixiv.net/member_illust.php?mode=medium&illust_id=68560262" target="_blank"><img src="images/GARDEN.png" class="img-info"></a>
-            <p>Duis porttitor elit ipsum, ac mattis orci tincidunt a. In vel molestie orci. Donec imperdiet arcu in erat finibus vestibulum. Sed vestibulum lacinia dolor nec feugiat. Nulla at cursus diam. Nulla ac ultrices sem. Sed suscipit enim sit amet sapien rhoncus rhoncus. Nunc et gravida tellus. Integer tristique magna efficitur, iaculis erat vel, porta nisi. Fusce nisl lacus, tristique quis ornare vel, congue sit amet neque. Praesent sit amet erat ut odio gravida porttitor non in mauris.</p>
-            <hr>
+            <img src="images/GARDEN.png" class="img-info">
+            <p>Duis porttitor elit ipsum, ac mattis orci tincidunt a. In vel molestie orci. Donec imperdiet arcu in erat
+                finibus vestibulum. Sed vestibulum lacinia dolor nec feugiat. Nulla at cursus diam. Nulla ac ultrices
+                sem. Sed suscipit enim sit amet sapien rhoncus rhoncus. Nunc et gravida tellus. Integer tristique magna
+                efficitur, iaculis erat vel, porta nisi. Fusce nisl lacus, tristique quis ornare vel, congue sit amet
+                neque. Praesent sit amet erat ut odio gravida porttitor non in mauris.</p>
+        </div>
+
+        <div class="section-info">
             <h1>Praesent a lacus</h1>
             <p class="date">june 20, 2018</p>
-            <a href="https://www.pixiv.net/member_illust.php?mode=medium&illust_id=67769096" target="_blank"><img src="images/星の海をあるいた.png" class="img-info"></a>
-            <p>Praesent a lacus vel diam bibendum posuere in vel justo. Sed enim nibh, scelerisque sed massa porta, gravida luctus urna. Suspendisse dictum, ipsum et pellentesque mattis, ex orci semper mi, quis vestibulum augue est id mauris. Nunc tempus condimentum magna, eu iaculis felis placerat sagittis. Suspendisse ut cursus mi. Proin iaculis bibendum sem. Vivamus tempus pulvinar nulla, vel ornare purus vestibulum ac. Vivamus rhoncus ex ut enim dictum imperdiet. Fusce vulputate felis eu maximus viverra. Vestibulum posuere mattis lacus eget pulvinar. Aenean a vehicula sem, in tincidunt ipsum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed at venenatis ipsum. Maecenas ultricies lorem ac diam vulputate consequat. Nam non commodo magna. Vestibulum sit amet tortor ac urna accumsan dictum.</p>
-            <!--<a href="#top"><p align="center">Top ↑</p></a>-->
+            <img src="images/星の海をあるいた.png" class="img-info">
+            <p>Praesent a lacus vel diam bibendum posuere in vel justo. Sed enim nibh, scelerisque sed massa porta,
+                gravida luctus urna. Suspendisse dictum, ipsum et pellentesque mattis, ex orci semper mi, quis
+                vestibulum augue est id mauris. Nunc tempus condimentum magna, eu iaculis felis placerat sagittis.
+                Suspendisse ut cursus mi. Proin iaculis bibendum sem. Vivamus tempus pulvinar nulla, vel ornare purus
+                vestibulum ac. Vivamus rhoncus ex ut enim dictum imperdiet. Fusce vulputate felis eu maximus viverra.
+                Vestibulum posuere mattis lacus eget pulvinar. Aenean a vehicula sem, in tincidunt ipsum. Interdum et
+                malesuada fames ac ante ipsum primis in faucibus. Sed at venenatis ipsum. Maecenas ultricies lorem ac
+                diam vulputate consequat. Nam non commodo magna. Vestibulum sit amet tortor ac urna accumsan dictum.</p>
         </div>
     </div>
+    <a href="#top">
+        <div class="top">Top ↑</div>
+    </a>
 </div>
-
-<!--<h1 style="color:#FDFFDE">#FDFFDE</h1>-->
-<!--<h1 style="color:#DEFFF1">#DEFFF1</h1>-->
-<!--<h1 style="color:#FFDEEC">#FFDEEC</h1>-->
-<!--<h1 style="color:#E1DEFF">#E1DEFF</h1>-->
 
 
 <div class="container-center" id="outside">
